--- a/src/view/view.fxml
+++ b/src/view/view.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Circle?>
 
-<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller" stylesheets="@../assets/styles.css">
     <children>
-        <Button fx:id="myButton" text="Click Me!" onAction="#handleButtonClick"/>
+        <Button fx:id="myButton" text="+" styleClass="round-button" onAction="#handleButtonClick" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10"/>
         <Line fx:id="myLine" startX="50.0" startY="50.0" endX="200.0" endY="200.0" strokeWidth="2.0" onMouseClicked="#handleLineClick"/>
         <Circle fx:id="myPoint" centerX="50.0" centerY="50.0" radius="10.0" fill="red" onMouseClicked="#handleCircleClick"/>
     </children>
-</Pane>
+</AnchorPane>
