--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -29,3 +29,12 @@
     -fx-right-padding: 35; /* Padding inside the button */
     -fx-font-size: 20px; /* Font size */
 }
+
+.plan-button {
+    -fx-background-color: #3498db; /* Background color */
+    -fx-text-fill: white; /* Text color */
+    -fx-background-radius: 50; /* Round background */
+    -fx-left-padding: 35; /* Padding inside the button */
+    -fx-right-padding: 35; /* Padding inside the button */
+    -fx-font-size: 20px; /* Font size */
+}
