--- a/src/main/java/ressources/assets/styles.css
+++ b/src/main/java/ressources/assets/styles.css
@@ -1,11 +1,40 @@
-.round-button {
+.plus-button {
     -fx-background-color: #3498db; /* Background color */
     -fx-text-fill: white; /* Text color */
-    -fx-border-color: #2980b9; /* Border color */
-    -fx-border-radius: 50; /* Round borders */
     -fx-background-radius: 50; /* Round background */
-    -fx-left-padding: 15; /* Padding inside the button */
-    -fx-right-padding: 15; /* Padding inside the button */
+    -fx-left-padding: 35; /* Padding inside the button */
+    -fx-right-padding: 35; /* Padding inside the button */
     -fx-font-size: 20px; /* Font size */
 
+}
+
+.plus-button:hover {
+    -fx-background-color: rgb(80, 39, 81); 
+}
+
+.file-button {
+    -fx-background-color: #3498db; /* Background color */
+    -fx-text-fill: white; /* Text color */
+    -fx-background-radius: 50; /* Round background */
+    -fx-left-padding: 35; /* Padding inside the button */
+    -fx-right-padding: 35; /* Padding inside the button */
+    -fx-font-size: 20px; /* Font size */
+}
+
+.select-button {
+    -fx-background-color: #3498db; /* Background color */
+    -fx-text-fill: white; /* Text color */
+    -fx-background-radius: 50; /* Round background */
+    -fx-left-padding: 35; /* Padding inside the button */
+    -fx-right-padding: 35; /* Padding inside the button */
+    -fx-font-size: 20px; /* Font size */
+}
+
+.plan-button {
+    -fx-background-color: #3498db; /* Background color */
+    -fx-text-fill: white; /* Text color */
+    -fx-background-radius: 50; /* Round background */
+    -fx-left-padding: 35; /* Padding inside the button */
+    -fx-right-padding: 35; /* Padding inside the button */
+    -fx-font-size: 20px; /* Font size */
 }
