--- a/src/main/java/view/view.fxml
+++ b/src/main/java/view/view.fxml
@@ -4,11 +4,27 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Circle?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 
-<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller" stylesheets="@../assets/styles.css">
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.controller.Controller" stylesheets="@../ressources/assets/styles.css" styleClass="pane">
     <children>
-        <Button fx:id="myButton" text="+" styleClass="round-button" onAction="#handleButtonClick" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10"/>
-        <Line fx:id="myLine" startX="50.0" startY="50.0" endX="200.0" endY="200.0" strokeWidth="2.0" onMouseClicked="#handleLineClick"/>
-        <Circle fx:id="myPoint" centerX="50.0" centerY="50.0" radius="10.0" fill="red" onMouseClicked="#handleCircleClick"/>
+    <StackPane prefHeight="550.0" prefWidth="800.0">
+        <Button fx:id="chargerPlan" text="Charger un plan" styleClass="plan-button" onAction="#handleLoadPlan" />
+    </StackPane>
+    
+        <Button fx:id="boutonPlus" text="+" styleClass="plus-button" onAction="#handleButtonClick" visible="false" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10"/>
+        <Button fx:id="chargerFichierButton" text="Charger un fichier de demandes" styleClass="file-button" onAction="#handleFileButton"
+            visible="false" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="60"/>
+        <Button fx:id="selectionnerPointButton" text="Sélectionner un point" styleClass="select-button" onAction="#handleSelectButton"
+            visible="false" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="110"/>
+        <Button fx:id="chargerNouveauPlan" text="Charger un nouveau plan" styleClass="select-button" onAction="#handleLoadPlan"
+            visible="false" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="160"/>
+    <VBox fx:id="deliveryInfoVBox" visible="false" layoutX="550" layoutY="10" prefHeight="400.0" spacing="10">
+        <!-- Les informations des points de livraison s'afficheront ici -->
+        <Label fx:id="label" text="Liste des Points de Livraison" />
+    </VBox>
     </children>
 </AnchorPane>
