selection nb livreurs

--- a/src/main/java/ressources/assets/styles.css
+++ b/src/main/java/ressources/assets/styles.css
@@ -50,3 +50,8 @@
     -fx-position: absolute; /* Absolute positioning */
     -fx-right: 0; /* Positioned to the right */
 }
+
+.title {
+    -fx-font-size: 24px; /* Font size */
+    -fx-font-weight: bold; /* Bold text */
+}
