--- a/src/main/java/ressources/view.fxml
+++ b/src/main/java/ressources/view.fxml
@@ -39,7 +39,7 @@
                     </StackPane>
                     <Button fx:id="boutonPlus" text="+" styleClass="plus-button" onAction="#handleButtonClick" visible="false" layoutY="55" layoutX="250" />
                     <Button fx:id="chargerFichierButton" text="Charger un fichier de demandes" styleClass="file-button" onAction="#handleFileButton" visible="false" layoutY="95" layoutX="250"/>
-                    <Button fx:id="selectionnerPointButton" text="Sélectionner un point sur la carte" styleClass="file-button" onAction="#handleSelectButton" visible="false" layoutY="135" layoutX="250"/>
+                    <Button fx:id="selectionnerPointButton" text="Ajouter un point de livraison sur la carte" styleClass="file-button" onAction="#handleSelectButton" visible="false" layoutY="135" layoutX="250"/>
                     <Button fx:id="chargerNouveauPlan" text="Charger un nouveau plan" styleClass="file-button" onAction="#handleLoadPlan" visible="false" layoutY="175" layoutX="250"/>
                     <Button fx:id="calculerChemin" text="Calculer un chemin" styleClass="file-button" onAction="#calculerChemin" visible="false" layoutY="550" layoutX="450"/>
                     <Button fx:id="exportXML" text="Exporter le résultat" styleClass="file-button" onAction="#handleExportXML" visible="false" layoutY="215" layoutX="250"/>
